--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,11 @@
 h1{
+	text-align:center;
 	color:darkgreen;
 }
 .d1{
 	height:24px;
 	margin-top:20px;
+	background: yellow;
 	font:16px/24px "微软雅黑";
-	color:red;
+	color:blue;
 }
